<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/movie"
        android:title="@string/movie"
        app:showAsAction="always"
        android:icon="@drawable/movie_icon" />

    <item
        android:id="@+id/tvshow"
        android:title="@string/tv_show"
        app:showAsAction="always"
        android:icon="@drawable/tvshow_icon" />

    <item
        android:id="@+id/favorite"
        android:title="@string/favorite"
        app:showAsAction="always"
        android:icon="@drawable/favorite_icon" />

</menu>