<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/barColor"
    tools:context=".ui.favorite.show.FavoriteShowFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_show_favorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/movie_item" />

</androidx.constraintlayout.widget.ConstraintLayout>